<resources>
    <string name="app_name">Journal</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="select_date_hint">Select date</string>
    <string name="save_button">Save</string>
    <string name="confirm_delete">Delete this journal entry?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search for a journal entry by:</string>
</resources>